# SkillWard

./: .env.example  .gitignore  Dockerfile  README.md  README_CN.md  config.py  main.py  requirements.txt
docs/: UPDATE_REPORT_2026-04-10.md  (+13 more)
skill-scanner/: .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURE.md  LICENSE  Makefile  README.md  SECURITY.md  TESTING.md  lynx_test_2phase_alert_rule_optimized.py  pyproject.toml  version.py
skill-scanner/.github/: PULL_REQUEST_TEMPLATE.md
skill-scanner/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
skill-scanner/.github/workflows/: integration-tests.yml  python-tests.yml  release.yml  scan-skills.yml  update-homebrew.yml
skill-scanner/Formula/: skill-scanner.rb
skill-scanner/docs/: README.md  competitive-analysis.md  github-actions.md  guardian-oss-deployment-plan.md
skill-scanner/docs/architecture/: binary-handling.md  index.md  scanning-pipeline.md  threat-taxonomy.md
skill-scanner/docs/architecture/analyzers/: behavioral-analyzer.md  cloud-defense-analyzer.md  index.md  llm-analyzer.md  meta-analyzer.md  meta-and-external-analyzers.md  static-analyzer.md  writing-custom-rules.md
skill-scanner/docs/concepts/: remote-skills-analysis.md  security-model.md
skill-scanner/docs/development/: index.md  integrations.md  setup-and-testing.md
skill-scanner/docs/features/: index.md
skill-scanner/docs/getting-started/: quick-start.md
skill-scanner/docs/guides/: examples-and-how-to.md
skill-scanner/docs/reference/: api-endpoint-reference.md  cli-command-reference.md  configuration-reference.md  dependencies-and-llm-providers.md  index.md  output-formats.md  policy-quick-reference.md
skill-scanner/docs/user-guide/: api-endpoints-detail.md  api-operations.md  api-rationale.md  api-server.md  cli-usage.md  custom-policy-configuration.md  index.md  installation-and-configuration.md  python-sdk.md  scan-policies-overview.md
skill-scanner/evals/: README.md  __init__.py
skill-scanner/evals/policies/: 01_baseline_no_policy.yaml  02_strict_preset.yaml  03_permissive_preset.yaml  04_compliance_audit.yaml  05_ci_pipeline.yaml  06_internal_tooling.yaml  07_no_pipeline_analysis.yaml  08_yara_wide_open.yaml  09_cred_heavy.yaml  10_max_sensitivity.yaml
skill-scanner/evals/runners/: __init__.py  benchmark_runner.py  eval_runner.py  policy_benchmark.py  update_expected_findings.py
skill-scanner/evals/skills/adversarial/api-doc-gen/: SKILL.md  generator.py
skill-scanner/examples/: __init__.py  advanced_scanning.py  api_usage.py  basic_scan.py  batch_scanning.py  behavioral_analyzer_example.py  integration_example.py  llm_analyzer_example.py  programmatic_usage.py
skill-scanner/examples/custom-rule-pack/: pack.yaml  signatures.yaml
skill-scanner/scripts/: check_taxonomy.py  fp_analysis_collect.py  generate_reference_docs.py  pre-commit-hook.sh  update_brew_formula.py
skill-scanner/skill_scanner/: __init__.py
skill-scanner/skill_scanner/api/: __init__.py  api.py  api_cli.py  api_server.py  router.py
skill-scanner/skill_scanner/cli/: __init__.py  cli.py  policy_tui.py  wizard.py
skill-scanner/skill_scanner/config/: __init__.py  config.py  constants.py  yara_modes.py
skill-scanner/skill_scanner/core/: __init__.py  analyzability.py  analyzer_factory.py  command_safety.py  exceptions.py  file_magic.py  loader.py  models.py  rule_registry.py  scan_policy.py  scanner.py  strict_structure.py
skill-scanner/skill_scanner/core/analyzers/: __init__.py  base.py  behavioral_analyzer.py  bytecode_analyzer.py  capability_risk_analyzer.py  cloud_defense_analyzer.py  cross_skill_scanner.py  llm_analyzer.py  llm_prompt_builder.py  llm_provider_config.py  llm_request_handler.py  llm_response_parser.py  meta_analyzer.py  pattern_analyzer.py  phase1_parallel_group.py  pipeline_analyzer.py  static.py  structure_validator.py  trigger_analyzer.py  virustotal_analyzer.py
skill-scanner/skill_scanner/core/extractors/: __init__.py  content_extractor.py
skill-scanner/skill_scanner/core/reporters/: __init__.py  html_reporter.py  json_reporter.py  markdown_reporter.py  sarif_reporter.py  table_reporter.py
skill-scanner/skill_scanner/core/rules/: __init__.py  patterns.py  yara_scanner.py
skill-scanner/skill_scanner/core/static_analysis/: __init__.py  bash_taint_tracker.py  context_extractor.py
skill-scanner/skill_scanner/data/: __init__.py  default_policy.yaml  permissive_policy.yaml
skill-scanner/skill_scanner/data/packs/: __init__.py
skill-scanner/skill_scanner/data/prompts/: skill_meta_analysis_prompt.md
skill-scanner/skill_scanner/hooks/: __init__.py  pre_commit.py
skill-scanner/skill_scanner/threats/: __init__.py  fangcun_ai_taxonomy.py  threat_taxonomy.py  threats.py
skill-scanner/skill_scanner/utils/: __init__.py  file_utils.py  logging_config.py  logging_utils.py
skill-scanner/tests/: __init__.py  conftest.py  test_analyzability.py  test_analyzer_factory.py  test_api_deep.py  test_api_endpoints.py  test_api_server_config.py  test_bash_taint_tracker.py  test_bug_fixes.py  test_bytecode_analyzer.py  test_cli_custom_rules.py  test_cli_formats.py  test_cli_taxonomy_flags.py  test_cli_tui_api_fixes.py  test_cloud_defense_analyzer.py  test_command_safety.py  test_compound_sequences.py  test_config.py  test_cross_skill_scanner.py  test_e2e.py  test_extractors.py  test_file_magic.py  test_hidden_files.py  test_integration.py  test_issue_fixes.py  test_llm_analyzer.py  test_llm_request_handler.py  test_loader.py  test_markdown_code_blocks.py  test_meta_analyzer.py  test_models.py  test_new_detections.py  test_pipeline_analyzer.py  test_policy_integration.py  test_policy_knobs.py  test_reporters.py  test_robustness_features.py  test_rule_registry.py  test_scan_policy.py  test_scanner.py  (+10 more)
skill-scanner/tests/behavioral/: README.md  __init__.py  test_alignment_llm_client.py  test_behavioral_analyzer.py  test_enhanced_behavioral.py
skill-scanner/tests/static_analysis/: README.md  __init__.py  test_static_analyzer.py
(+171 files in other folders)
