[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillward-scanner"
version = "0.1.0"
description = "Static analysis engine for AI Agent Skill packages"
readme = {text = "", content-type = "text/plain"}
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "PyYAML>=6.0.1",
    "python-frontmatter>=1.0.0",
    "yara-x>=1.12.0",
    "magika>=0.6.0",
    "pdfid>=1.1.0",
    "oletools>=0.60.1",
    "confusable-homoglyphs>=3.3.0",
]

[tool.setuptools.packages.find]
include = ["skill_scanner*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "F401", "F841", "B904", "B006", "B007", "B008", "B023"]
